@@ -1,5 +1,7 @@
 2016-07-26  Per Bothner  <per@bothner.com>
 
+	* kawa/pictures.scm (draw): Generalize by using DrawShape:makeDraw.
+
 	* kawa/pictures.scm (image): New procedure.
 
 2016-07-22  Per Bothner  <per@bothner.com>
